{
    "version": 1,
    "name": "ProjectInputActions",
    "maps": [
        {
            "name": "GameScene",
            "id": "3f18f3ac-b10d-4ae8-911e-182342ba7cdf",
            "actions": [
                {
                    "name": "UpArrow",
                    "type": "Button",
                    "id": "596d1a5d-cff5-43ca-ab9a-6a7a6634f05b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownArrow",
                    "type": "Button",
                    "id": "89b2cbc4-04c5-4b50-80c7-82cdf6c62996",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "62c7e0bb-d609-4a42-aa25-247f697f2766",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cc3e2d03-fdcd-41bc-8613-96964193f5f0",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76f0a77c-9467-4a9d-98f0-22b0eaa8b1ce",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownArrow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "969ee1b0-9b4b-4e09-8c95-2f65fa9a5c5c",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26c0b88c-74b8-4f10-b86d-aea7cd9fbf6d",
                    "path": "<Keyboard>/numpadEnter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}